--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://enconvo.com/schemas/extension.json",
   "name": "llm_website",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Top LLM Provider's Website",
   "title": "LLM Website",
   "icon": "icon.png",
@@ -61,7 +61,7 @@
           "default": "1000x700"
         }
       ]
-    }, 
+    },
     {
       "name": "claude",
       "icon": "claude.png",
@@ -89,16 +89,15 @@
     }
   ],
   "dependencies": {
-    "@enconvo/api": "^0.1.9",
-    "@langchain/core": "^0.1.52"
+    "@enconvo/api": "^0.1.151"
   },
   "devDependencies": {
-    "@types/node": "^18.17.14",
-    "@types/react": "18.2.27",
-    "eslint": "^8.33.0",
-    "prettier": "^2.8.3",
-    "tsup": "^7.2.0",
-    "typescript": "^5.0.4"
+    "@types/node": "^22.10.2",
+    "@types/react": "19.0.2",
+    "eslint": "^9.17.0",
+    "prettier": "^3.4.2",
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.2"
   },
   "scripts": {
     "lint": "eslint src",
